--- a/css/author.css
+++ b/css/author.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  font-family: 'Arial', sans-serif;
   background: url('../image/authortablet.jpg') no-repeat center center fixed;
   background-size: cover;
   color: #fff;
@@ -87,6 +86,7 @@ body {
   font-size: 2em;
   margin-bottom: 40px;
   color: #000;
+  text-shadow: 2px 2px 4px rgba(238, 255, 0, 0.7);
 }
 
 .works {
