--- a/css/comicanimation.css
+++ b/css/comicanimation.css
@@ -109,6 +109,27 @@ body {
   }
 }
 
+/*RWD:ipad*/
+@media (max-width: 1024px) {
+    .wrapper {
+        height: 100vh;
+    }
+
+    .image-block {
+        width: 100%;
+        height: 100%;
+    }
+
+    .image-block::before {
+        font-size: 2.5rem; 
+        text-shadow: 1.5px 1.5px 4px #f6ff00; 
+    }
+
+    .image-block:hover img {
+        transform: scale(1.02); 
+    }
+}
+
 /*RWD:mobile*/
 @media (max-width: 480px) {
   .wrapper {
