--- a/css/bandprofilesyh.css
+++ b/css/bandprofilesyh.css
@@ -341,7 +341,7 @@ a:hover {
 
 /* 子選單（初始隱藏） */
 .has-submenu .submenu {
-  display: none; /* 始終渲染在 DOM 中 */
+  display: none;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.4s ease;
@@ -353,7 +353,7 @@ a:hover {
 
 /* 子選單展開 */
 .has-submenu.active .submenu {
-  max-height: 500px; /* 動畫展開用，設為足夠容納內容的高度 */
+  max-height: 500px;
   margin-top: 10px;
   padding-top: -100px;
 }
