--- a/css/comic.css
+++ b/css/comic.css
@@ -131,7 +131,7 @@ body {
 }
 
 /*RWD:mobile*/
-@media (max-width: 300px) {
+@media (max-width: 480px) {
   body {
     background-image: url('../image/comicbackgroundtablet.jpg');
     background-attachment: scroll;
@@ -148,19 +148,21 @@ body {
   }
 
   .book-grid {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 10px;
     row-gap: 25px;
-    padding: 80px 5vw 50px;
+    padding: 150px 4vw 50px;
   }
 
   .book {
-    max-width: 85vw;
-    min-width: 140px;
+    width: 100%;
+    max-width: none;
+    height: auto !important;
+    aspect-ratio: 3 / 4;
+    max-height: none !important;
     height: auto;
-    min-height: 200px;
     opacity: 0;
     transform: translateY(30px);
-    font-size: 0.9em;
   }
 
   .book.show {
@@ -191,6 +193,7 @@ body {
   }
 
   .book-front img {
+    width: 100%;
     height: 100%;
     object-fit: cover;
   }
