--- a/css/vote.css
+++ b/css/vote.css
@@ -618,3 +618,17 @@ footer {
   font-size: 0.8em;
   margin-left: 5px;
 }
+
+#page-transition {
+  position: fixed;
+  inset: 0;
+  background-color: black;
+  z-index: 9999;
+  opacity: 1;
+  pointer-events: none;
+  transition: opacity 0.8s ease;
+}
+
+#page-transition.hidden {
+  opacity: 0;
+}
