--- a/css/character5.css
+++ b/css/character5.css
@@ -82,7 +82,7 @@ body {
 }
 .bio p{
   margin-bottom:12px;
-  color: #ffffff;
+  color: #000000;
 }
 .bio ul{
   list-style: none;
@@ -94,7 +94,7 @@ body {
   background: rgba(0, 0, 0, 0.04);
   padding:6px 10px; border-radius:8px;
   font-size:14px;
-  color: #ffffff;
+  color: #000000;
 }
 
 /*右側圓形按鈕*/
